# RPG2D

./: .gitignore  BuildEditor.bat  BuildGame.bat  BuildingEditor.hpp  CMakeLists.txt  Game.hpp  MapEditor.hpp  README.md  RPG2DConfig.h.in  build.bat  main.cpp  update.txt
assets/buildings/: building_000.building  building_000.txt  building_001-kopia.building  building_001.building  building_002.building  testBuilding.txt  test_building - kopia.building  test_building.building
assets/items/: 0_to_repair.txt
assets/monsters/: 00_Stats.txt
assets/shaders/: circles.frag  empty.frag  lake.frag  palette_lake.frag  shadow.frag
assets/tiles/: info.txt
assets/tiles/basic/: info.txt
dependencies/SFML/: info.txt
dialogues/: 000.txt  014.txt
headers/: Borders.hpp  BrushSizes.hpp  Buildings.hpp  BuildingsManager.hpp  Buttons.hpp  Camera.hpp  Character.hpp  Collisions.hpp  ControlsPanel.hpp  Dialogues.hpp  Doors.hpp  Fonts.hpp  Furnitures.hpp  GameObjects.hpp  GameObjectsManager.hpp  GameStates.hpp  HitTexts.hpp  InventoryPanel.hpp  Items.hpp  JournalPanel.hpp  Map.hpp  MapEditorPalette.hpp  Maps.hpp  MenuBar.hpp  Message.hpp  Monsters.hpp  Mouse.hpp  Natures.hpp  Objects.hpp  OpenDialogBox.hpp  Painter.hpp  Palette.hpp  Pathfinding.hpp  Paths.hpp  Player.hpp  PlayerInventory.hpp  PrefabToPaint.hpp  Prefabs.hpp  Quests.hpp  RenderParameters.hpp  (+14 more)
src/: BuildingEditor.hpp  Game.hpp  MainGame.cpp  MapEditor.hpp  MeshEditor.hpp
src/Editor/: CMakeLists.txt  Editor.cpp
src/Game/: CMakeLists.txt  MainGame.cpp
src/Platform/: Borders.cpp  Borders.h  BrushSizes.cpp  BrushSizes.h  BuildingsManager.cpp  BuildingsManager.h  Buttons.cpp  Buttons.h  Camera.cpp  Camera.h  Character.cpp  Character.h  CharacterInfoPanel.cpp  CharacterInfoPanel.h  CharacterMenu.cpp  CharacterMenu.h  CharacterSideMenu.cpp  CharacterSideMenu.h  CheckBox.cpp  CheckBox.h  Clipboard.cpp  Clipboard.h  Collisions.cpp  Collisions.h  Config.cpp  Config.h  Confirm.cpp  Confirm.h  ContextMenu.cpp  ContextMenu.h  ControlsPanel.cpp  ControlsPanel.h  Dialog.cpp  Dialog.h  Dialogues.cpp  Dialogues.h  Doors.cpp  Doors.h  EditableTextArea.cpp  EditableTextArea.h  (+114 more)
src/headers/: BuildingsManager.hpp  Buttons.hpp  Character.hpp  CheckBox.hpp  Collisions.hpp  ControlsPanel.hpp  Dialog.hpp  Dialogues.hpp  Doors.hpp  FlatObjects.hpp  Fonts.hpp  Furnitures.hpp  GameObjects.hpp  GameObjectsManager.hpp  Items.hpp  Map.hpp  MenuBar.hpp  Monsters.hpp  OpenFileDialog.hpp  Painter.hpp  Palette.hpp  Plants.hpp  Player.hpp  Prefabs.hpp  Scrollbar.hpp  Shaders.hpp  TextArea.hpp  Textures.hpp  Theme.hpp  Tips.hpp  TradePanel.hpp  Units.hpp  Walls.hpp  Water.hpp
tools/GenerateOutlines/: CMakeLists.txt  GenerateOutlines.cpp  ShapeOutline.cpp  ShapeOutline.h
tools/GenerateTextureMap/: CMakeLists.txt  GenerateTextureMap.cpp
world/: world.map
world/buildings/: building_000.txt
world/maps/: map_0_0.txt  map_0_1.txt  map_0_2.txt  map_0_256.txt  map_0_3.txt  map_0_32.txt  map_0_4.txt  map_0_48.txt  map_0_5.txt  map_0_64.txt  map_10_0.txt  map_10_1.txt  map_10_2.txt  map_10_3.txt  map_11_2.txt  map_1_0.txt  map_1_1.txt  map_1_2.txt  map_1_3.txt  map_1_4.txt  map_1_6.txt  map_2_0.txt  map_2_1.txt  map_2_2.txt  map_2_3.txt  map_2_4.txt  map_2_5.txt  map_3_0.txt  map_3_1.txt  map_3_2.txt  map_3_3.txt  map_3_4.txt  map_4_0.txt  map_4_1.txt  map_4_2.txt  map_4_3.txt  map_4_4.txt  map_4_5.txt  map_4_6.txt  map_5_0.txt  (+27 more)
